Auto stash before merge of "Paul" and "main"

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ CameraSpeed=5
 RotGridEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -131,19 +131,40 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/Juliano
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash.P_AssaultRifle_MuzzleFlash
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -169,7 +190,7 @@ UNR=../../../../../IIM/ProjectBOOMBOOM/FastFPSProj/Content/FirstPersonBP/Maps
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
-GenericImport=C:/Users/paulp/Pictures/Montage PS/BarreDash.png
+GenericImport=C:/Users/paulp/Desktop/gameui-crosshair-pack_v1-3-sniper-update/_assets/11_separated-cross_2@2x.png
 GenericExport=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericOpen=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericSave=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
@@ -993,6 +1014,8 @@ SkeletonEditor.TimeStamp=2020.12.06-23.07.27
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2020.12.06-23.07.20
 PinnedCommandList.LastCompileMethod=Unknown
+PortalProxies.TimeStamp=2020.12.06-23.07.21
+PortalProxies.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Paul
@@ -1080,12 +1103,12 @@ ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,Parti
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 SceneComponent=CameraComponent.PostProcess.Lens
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
-FirstPersonCharacter_C=SphereComponent.Collision.Collision,
-PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
+FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
+PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
-Ui_C=CameraComponent.PostProcess.Lens,
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
+Ui_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
 MovementComponent=
 Zone_Damage_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
@@ -1813,6 +1836,37 @@ SphereComponent.Tags=True
 SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
+Weapon_BP_C.Tick=True
+Weapon_BP_C.Replication=True
+Weapon_BP_C.Rendering=True
+Weapon_BP_C.Collision=True
+Weapon_BP_C.Actor=True
+Weapon_BP_C.Input=True
+FirstPersonCharacter_C.Weapon=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+FirstPersonOverview_C.Testing=True
+FirstPersonOverview_C.Tutorial=True
+FirstPersonOverview_C.Stages=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+Weapon_BP_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1821,26 +1875,26 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash
-MRUItem2=/Game/MWPCopy/NewParticleSystem
-MRUItem3=/Game/FirstPersonBP/Maps/Paul
-MRUItem4=/Game/FirstPersonBP/Blueprints/Weapon_BP
-MRUItem5=/Game/FirstPersonBP/Blueprints/HitActor_Test
-MRUItem6=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem7=/Game/FirstPersonBP/Widgets/Ui
-MRUItem8=/Game/FirstPersonBP/Blueprints/CameraShakeFiring
-MRUItem9=/Game/FirstPerson/FPWeapon/Mesh/SK_FPGun
-MRUItem10=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A_Skeleton
-MRUItem11=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
-MRUItem12=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A
-MRUItem13=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_MuzzleFlash
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem15=/Game/FirstPersonBP/Blueprints/Hit_Test
-MRUItem16=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton
-MRUItem17=/Game/UI/MainMenu
-MRUItem18=/Game/FirstPersonBP/Maps/Pierre
-MRUItem19=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem0=/Game/FirstPersonBP/Blueprints/Weapon_BP
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/FirstPersonBP/Maps/Paul
+MRUItem3=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
+MRUItem4=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
+MRUItem5=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
+MRUItem6=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash
+MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem8=/Game/FirstPersonBP/Widgets/Ui2
+MRUItem9=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem10=/Game/FirstPersonBP/Widgets/Ui
+MRUItem11=/Game/MWPCopy/NewParticleSystem
+MRUItem12=/Game/FirstPersonBP/Blueprints/HitActor_Test
+MRUItem13=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem14=/Game/FirstPersonBP/Blueprints/CameraShakeFiring
+MRUItem15=/Game/FirstPerson/FPWeapon/Mesh/SK_FPGun
+MRUItem16=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A_Skeleton
+MRUItem17=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A
+MRUItem18=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_MuzzleFlash
+MRUItem19=/Game/FirstPersonBP/Blueprints/Hit_Test
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
@@ -1865,13 +1919,17 @@ MRUItem19=/Game/FirstPersonBP/Maps/MainMenu
 /Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A.Assault_Rifle_A=1
 /Game/FirstPersonBP/Blueprints/CameraShakeFiring.CameraShakeFiring=1
 /Game/MWPCopy/P_AssaultRifle_MuzzleFlash.P_AssaultRifle_MuzzleFlash=1
+/Game/FirstPersonBP/Widgets/Ui2.Ui=1
+/Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=1
+/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton.Assault_Rifle_A_Skeleton=1
+/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01.P_AssaultRifle_Tracer_01=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[29]\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -1896,14 +1954,14 @@ CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Ui_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Ui_C=
+UserWidget=
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
@@ -1919,6 +1977,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -1997,7 +2056,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2152,4 +2211,6 @@ bTimelineDisplayCurveKeys=False
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
