--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Animations
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -161,10 +161,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Juliano
+LastLevel=/Game/FirstPersonBP/Maps/Paul
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPerson/Animations/FirstPersonFire_Montage.FirstPersonFire_Montage
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -186,7 +188,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../IIM/ProjectBOOMBOOM/FastFPSProj/Content/FirstPersonBP/Maps
+UNR=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/FirstPersonBP/Maps
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
@@ -1016,6 +1018,8 @@ PinnedCommandList.TimeStamp=2020.12.06-23.07.20
 PinnedCommandList.LastCompileMethod=Unknown
 PortalProxies.TimeStamp=2020.12.06-23.07.21
 PortalProxies.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2020.12.06-23.06.49
+AnimationEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Paul
@@ -1101,7 +1105,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bi
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 CameraComponent=CameraComponent.PostProcess.Lens,
-CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
+CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,
 SceneComponent=CameraComponent.PostProcess.Lens
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
 FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
@@ -1117,6 +1121,7 @@ PlayerController=CameraComponent.PostProcess.Lens,
 MainMenu_C=
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
+FirstPerson_AnimBP_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1867,6 +1872,36 @@ AnimSequence.File Path=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
 Weapon_BP_C.Default=True
+Weapon_BP_C.TransformCommon=True
+FirstPerson_AnimBP_C.Default=True
+FirstPerson_AnimBP_C.RootMotion=True
+FirstPerson_AnimBP_C.Notifies=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+FbxImportUI.Mesh=True
+FbxImportUI.Animation=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.FbxFileInformation=True
+BoneProxy.Transform=True
+BoneProxy.Bone=True
+BoneProxy.Reference Transform=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimMontage.Animation=True
+AnimMontage.BlendOption=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1875,29 +1910,29 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Weapon_BP
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Maps/Paul
-MRUItem3=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
-MRUItem4=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
-MRUItem5=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
-MRUItem6=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem8=/Game/FirstPersonBP/Widgets/Ui2
-MRUItem9=/Game/FirstPersonBP/FirstPersonOverview
-MRUItem10=/Game/FirstPersonBP/Widgets/Ui
-MRUItem11=/Game/MWPCopy/NewParticleSystem
-MRUItem12=/Game/FirstPersonBP/Blueprints/HitActor_Test
-MRUItem13=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem14=/Game/FirstPersonBP/Blueprints/CameraShakeFiring
-MRUItem15=/Game/FirstPerson/FPWeapon/Mesh/SK_FPGun
-MRUItem16=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A_Skeleton
-MRUItem17=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A
-MRUItem18=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_MuzzleFlash
-MRUItem19=/Game/FirstPersonBP/Blueprints/Hit_Test
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPerson/Animations/FirstPersonFire_Montage
+MRUItem2=/Game/FirstPerson/Animations/FirstPerson_Fire
+MRUItem3=/Game/FirstPerson/Animations/FirstPerson_Idle
+MRUItem4=/Game/FirstPerson/Animations/FirstPerson_JumpLoop
+MRUItem5=/Game/FirstPerson/Animations/FirstPerson_RunWithoutGun
+MRUItem6=/Game/FirstPerson/Animations/FirstPerson_JumpEnd
+MRUItem7=/Game/FirstPerson/Animations/FirstPerson_Run
+MRUItem8=/Game/FirstPerson/Animations/FirstPerson_AnimBP
+MRUItem9=/Game/FirstPersonBP/Maps/Paul
+MRUItem10=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_MuzzleFlashRetro
+MRUItem11=/Game/FirstPersonBP/Blueprints/Weapon_BP
+MRUItem12=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
+MRUItem13=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
+MRUItem14=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
+MRUItem15=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash
+MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem17=/Game/FirstPersonBP/Widgets/Ui2
+MRUItem18=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem19=/Game/FirstPersonBP/Widgets/Ui
 
 [AssetEditorToolkitTabLocation]
-/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Particules/Dash_Particules.Dash_Particules=1
 /Game/Materials/Dash_Particules.Dash_Particules=1
 /Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=1
@@ -1923,16 +1958,19 @@ MRUItem19=/Game/FirstPersonBP/Blueprints/Hit_Test
 /Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=1
 /Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton.Assault_Rifle_A_Skeleton=1
 /Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01.P_AssaultRifle_Tracer_01=1
+/Game/MilitaryWeapSilver/FX/P_AssaultRifle_MuzzleFlashRetro.P_AssaultRifle_MuzzleFlashRetro=1
+/Game/FirstPerson/Animations/FirstPerson_Idle.FirstPerson_Idle=1
+/Game/FirstPerson/Animations/FirstPerson_Run.FirstPerson_Run=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[29]\" "
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModule="\"Object.Size.StartSize.Distribution\" "
+ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize.Distribution\" "
@@ -2056,7 +2094,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2213,4 +2251,129 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+
+[ColorThemes]
+Theme0=New Theme
+Theme0Color0=(R=22.500000,G=0.960000,B=5.000000,A=1.000000)
+Theme0Label0=
+Theme0Color1=(R=261.797638,G=1.000000,B=5.000000,A=1.000000)
+Theme0Label1=
+Theme0Color2=(R=15.789459,G=0.950000,B=52.000004,A=1.000000)
+Theme0Label2=
+Theme0Color3=(R=229.763641,G=1.000000,B=5.000000,A=1.000000)
+Theme0Label3=
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=True
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
