Enemy NOT finish

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,6 @@ ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -159,16 +158,22 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Juliano
+LastLevel=/Game/FirstPersonBP/Maps/Pierre
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/GameManager.GameManager
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/AI/Spawn.Spawn
+OpenAssetsAtExit=/Game/EnemyAI/EnemyAI.EnemyAI
+OpenAssetsAtExit=/Game/EnemyAI/EnemyAIController.EnemyAIController
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
-WindowSize=X=1283.000 Y=723.000
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -186,7 +191,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../IIM/ProjectBOOMBOOM/FastFPSProj/Content/FirstPersonBP/Maps
+UNR=../../../../UnrealFPS/FastFPSProj/Content/FirstPersonBP/Maps
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
@@ -1018,10 +1023,10 @@ PortalProxies.TimeStamp=2020.12.06-23.07.21
 PortalProxies.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/Paul
-MRUItem1=/Game/FirstPersonBP/Maps/Juliano
-MRUItem2=/Game/FirstPersonBP/Maps/Antoine
-MRUItem3=/Game/FirstPersonBP/Maps/Pierre
+MRUItem0=/Game/FirstPersonBP/Maps/Pierre
+MRUItem1=/Game/FirstPersonBP/Maps/Paul
+MRUItem2=/Game/FirstPersonBP/Maps/Juliano
+MRUItem3=/Game/FirstPersonBP/Maps/Antoine
 MRUItem4=/Game/FirstPersonBP/Maps/GameOver
 MRUItem5=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1103,11 +1108,11 @@ ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,Parti
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 SceneComponent=CameraComponent.PostProcess.Lens
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
-FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
-PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
+FirstPersonCharacter_C=
+PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
 Ui_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
 MovementComponent=
 Zone_Damage_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
@@ -1117,6 +1122,14 @@ PlayerController=CameraComponent.PostProcess.Lens,
 MainMenu_C=
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
+GameManager_C=K2Node_CustomEvent.Inputs.InputArgument0,
+TargetPoint=TargetPoint.Rendering.TextureStreaming,TargetPoint.Rendering.LOD,
+Spawn_C=
+K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
+EnemyAI_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
+EnemyAIController_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
+FindPlayer_C=
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1867,6 +1880,126 @@ AnimSequence.File Path=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
 Weapon_BP_C.Default=True
+GameManager_C.Tick=True
+GameManager_C.Default=True
+GameManager_C.Replication=True
+GameManager_C.Rendering=True
+GameManager_C.Collision=True
+GameManager_C.Actor=True
+GameManager_C.Input=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Physics=True
+TargetPoint.Collision=True
+TargetPoint.Lighting=True
+TargetPoint.Rendering=True
+TargetPoint.Navigation=True
+TargetPoint.VirtualTexture=True
+TargetPoint.Tags=True
+TargetPoint.Activation=True
+TargetPoint.Cooking=True
+TargetPoint.Replication=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+TargetPoint.HLOD=True
+GameManager_C.TransformCommon=True
+Spawn_C.Tick=True
+Spawn_C.Default=True
+Spawn_C.Replication=True
+Spawn_C.Rendering=True
+Spawn_C.Collision=True
+Spawn_C.Actor=True
+Spawn_C.Input=True
+Spawn_C.TransformCommon=True
+Patrolling_C.TransformCommon=True
+Patrolling_C.Animation=True
+Patrolling_C.Mesh=True
+Patrolling_C.Clothing=True
+Patrolling_C.Physics=True
+Patrolling_C.Collision=True
+Patrolling_C.MasterPoseComponent=True
+Patrolling_C.Lighting=True
+Patrolling_C.ClothingSimulation=True
+Patrolling_C.Rendering=True
+Patrolling_C.SkinWeights=True
+Patrolling_C.Navigation=True
+Patrolling_C.VirtualTexture=True
+Patrolling_C.Tags=True
+Patrolling_C.Activation=True
+Patrolling_C.Cooking=True
+Patrolling_C.Character Movement (General Settings)=True
+Patrolling_C.Character Movement: Walking=True
+Patrolling_C.Character Movement: Jumping / Falling=True
+Patrolling_C.Character Movement (Networking)=True
+Patrolling_C.Character Movement: Swimming=True
+Patrolling_C.Character Movement: Flying=True
+Patrolling_C.Character Movement: Custom Movement=True
+Patrolling_C.Character Movement (Rotation Settings)=True
+Patrolling_C.Character Movement: Physics Interaction=True
+Patrolling_C.Character Movement=True
+Patrolling_C.Character Movement: Avoidance=True
+Patrolling_C.RootMotion=True
+Patrolling_C.Character Movement: NavMesh Movement=True
+Patrolling_C.NavMovement=True
+Patrolling_C.Velocity=True
+Patrolling_C.PlanarMovement=True
+Patrolling_C.MovementComponent=True
+Patrolling_C.Shape=True
+Patrolling_C.Character=True
+Patrolling_C.Camera=True
+Patrolling_C.Pawn=True
+Patrolling_C.Replication=True
+Patrolling_C.Input=True
+Patrolling_C.Actor=True
+K2Node_BreakStruct.PinOptions=True
+EnemyAI_C.Default=True
+EnemyAI_C.Tick=True
+EnemyAI_C.Character=True
+EnemyAI_C.Camera=True
+EnemyAI_C.Pawn=True
+EnemyAI_C.Replication=True
+EnemyAI_C.Rendering=True
+EnemyAI_C.Collision=True
+EnemyAI_C.Actor=True
+EnemyAI_C.Input=True
+FindPlayer_C.Default=True
+FindPlayer_C.Task=True
+FindPlayer_C.Description=True
+EnemyAI_C.TransformCommon=True
+EnemyAI_C.Animation=True
+EnemyAI_C.Mesh=True
+EnemyAI_C.Physics=True
+EnemyAI_C.Clothing=True
+EnemyAI_C.MasterPoseComponent=True
+EnemyAI_C.Lighting=True
+EnemyAI_C.ClothingSimulation=True
+EnemyAI_C.SkinWeights=True
+EnemyAI_C.Navigation=True
+EnemyAI_C.VirtualTexture=True
+EnemyAI_C.Tags=True
+EnemyAI_C.Activation=True
+EnemyAI_C.Cooking=True
+EnemyAI_C.Character Movement (General Settings)=True
+EnemyAI_C.Character Movement: Walking=True
+EnemyAI_C.Character Movement: Jumping / Falling=True
+EnemyAI_C.Character Movement (Networking)=True
+EnemyAI_C.Character Movement: Swimming=True
+EnemyAI_C.Character Movement: Flying=True
+EnemyAI_C.Character Movement: Custom Movement=True
+EnemyAI_C.Character Movement (Rotation Settings)=True
+EnemyAI_C.Character Movement: Physics Interaction=True
+EnemyAI_C.Character Movement=True
+EnemyAI_C.Character Movement: Avoidance=True
+EnemyAI_C.RootMotion=True
+EnemyAI_C.Character Movement: NavMesh Movement=True
+EnemyAI_C.NavMovement=True
+EnemyAI_C.Velocity=True
+EnemyAI_C.PlanarMovement=True
+EnemyAI_C.MovementComponent=True
+EnemyAI_C.Shape=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1875,26 +2008,26 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Weapon_BP
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Maps/Paul
-MRUItem3=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
-MRUItem4=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
-MRUItem5=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
-MRUItem6=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem8=/Game/FirstPersonBP/Widgets/Ui2
-MRUItem9=/Game/FirstPersonBP/FirstPersonOverview
-MRUItem10=/Game/FirstPersonBP/Widgets/Ui
-MRUItem11=/Game/MWPCopy/NewParticleSystem
-MRUItem12=/Game/FirstPersonBP/Blueprints/HitActor_Test
-MRUItem13=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem14=/Game/FirstPersonBP/Blueprints/CameraShakeFiring
-MRUItem15=/Game/FirstPerson/FPWeapon/Mesh/SK_FPGun
-MRUItem16=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A_Skeleton
-MRUItem17=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A
-MRUItem18=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_MuzzleFlash
-MRUItem19=/Game/FirstPersonBP/Blueprints/Hit_Test
+MRUItem0=/Game/EnemyAI/FindPlayer
+MRUItem1=/Game/EnemyAI/EnemyAIController
+MRUItem2=/Game/EnemyAI/EnemyAI
+MRUItem3=/Game/FirstPersonBP/Maps/Pierre
+MRUItem4=/Game/FirstPersonBP/AI/Spawn
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem6=/Game/FirstPersonBP/AI/GameManager
+MRUItem7=/Game/FirstPersonBP/Blueprints/Weapon_BP
+MRUItem8=/Game/FirstPersonBP/Maps/Paul
+MRUItem9=/Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01
+MRUItem10=/Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton
+MRUItem11=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
+MRUItem12=/Game/MWPCopy/P_AssaultRifle_MuzzleFlash
+MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem14=/Game/FirstPersonBP/Widgets/Ui2
+MRUItem15=/Game/FirstPersonBP/FirstPersonOverview
+MRUItem16=/Game/FirstPersonBP/Widgets/Ui
+MRUItem17=/Game/MWPCopy/NewParticleSystem
+MRUItem18=/Game/FirstPersonBP/Blueprints/HitActor_Test
+MRUItem19=/Game/FirstPersonBP/Blueprints/Zone_Damage
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
@@ -1923,6 +2056,7 @@ MRUItem19=/Game/FirstPersonBP/Blueprints/Hit_Test
 /Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=1
 /Game/MilitaryWeapSilver/Weapons/Animations/Assault_Rifle_A_Skeleton.Assault_Rifle_A_Skeleton=1
 /Game/MilitaryWeapSilver/FX/P_AssaultRifle_Tracer_01.P_AssaultRifle_Tracer_01=1
+/Game/EnemyAI/FindPlayer.FindPlayer=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1978,6 +2112,10 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TargetPoint="\"Object.Display.SpriteComponent.Object.BodyInstance.WalkableSlopeOverride\" "
+GameManager_C=
+Spawn_C=
+EnemyAI_C=
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2056,7 +2194,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2108,6 +2246,11 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/EnemyAI/EnemyAI.EnemyAI;
+RecentlyPlaced=/Game/FirstPersonBP/AI/Patrolling.Patrolling;
+RecentlyPlaced=/Game/FirstPersonBP/AI/Spawn.Spawn;
+RecentlyPlaced=/Game/FirstPersonBP/AI/GameManager.GameManager;
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Particules/Dash_Particules.Dash_Particules;
@@ -2213,4 +2356,7 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+
+[DetailCategoriesAdvanced]
+PropertyWrapper.Variable=True
 
